yamls-for-product-cart-app/cart-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cart-service

spec:
  selector:
    app: cart-app

  type: NodePort

  ports:
    - port: 80
      targetPort: 8080
