yamls-for-product-cart-app/product-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service

spec:
  selector:
    app: product-app

  type: ClusterIP

  ports:
    - port: 80
      targetPort: 8080
